2012-01-01  Holger Vogt
 * inpcom.c, main.c, compatmode.h:
   .lib handling depends on input to compatmode

2011-12-30  Holger Vogt
 * b4v5dest.c, b4dest.c, b3dest, b3v32.dest : memory leaks reduced
 * b3v32... : struct bsim3SizeDependParam --> struct bsim3v32SizeDependParam
 * inpcom.c: undo commit from 2011-12-27, lib handling was defect!
 
2011-12-30  Robert Larice
 * inpcom.c :
  cleanup, drop `s_lower'
    FIXME case insensitive filename compare !!

2011-12-30  Robert Larice
 * inpcom.c :
  cleanup scope of `y' and `z'

2011-12-30  Robert Larice
 * inpcom.c :
  cleanup scope of `keep_char' and `s_lower', drop `s_ptr'

2011-12-30  Robert Larice
 * inpcom.c :
  cleanup, drop variable `found_library'

2011-12-30  Robert Larice
 * inpcom.c :
  cleanup scope of variable `newfp'

2011-12-30  Robert Larice
 * inpcom.c :
  cleanup scope of variable `big_buff2'

2011-12-30  Robert Larice
 * inpcom.c :
  cleanup scope of variable `dir_name_flag'

2011-12-30  Robert Larice
 * inpcom.c :
  bug fix, copys not always valid
    cleanup scope, emphasize live range
    avoid things to be freed too early
    avoid incorrect frees

2011-12-30  Holger Vogt
 * inpcom.c: remove a bug reading a file
   (FIXME: .inc and .lib need some general overhauling!)

2011-12-30  Robert Larice
 * src/include/ngspice/cktdefs.h ,
 * src/include/ngspice/pzdefs.h ,
 * src/spicelib/devices/nbjt2/nbjt2def.h ,
 * src/spicelib/devices/ndev/ndevexch.h ,
 * src/spicelib/devices/numd2/numd2def.h ,
 * src/spicelib/devices/numos/numosdef.h :
  remove CVS `Id',`log' etc. keyword incantations

2011-12-30  Holger Vogt
 * inppas3.c, cktdest.c: reduce memory leaks
 * inpsymt.c: beautify
 * inp.c: .csparam allows to tranfer a param into a vector
   for use in the .control section (yet experimental, not safe
   against syntax errors)

2011-12-29  Holger Vogt
 * b4v6dest.c : improved removal of circuit installation,
   bug no. 3229770. Memory leaks are quasi gone for